<resources>
    <string name="app_name">GoogleMaps</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="polyline">Polyline</string>
    <string name="clear">Clear</string>
    <string name="markers">Markers</string>
    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="implement_listener">must implement BottomSheetListener</string>
    <string name="polyline_has_added">Polyline has added</string>
    <string name="markers_have_added">Markers have added</string>
    <string name="map_has_cleaned">Map has cleaned</string>
</resources>