<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.bottom_sheet.MapBottomSheetDialog">


    <Button
        android:id="@+id/btn_normal"
        style="@style/btn_style"
        android:text="@string/normal"
        app:layout_constraintEnd_toStartOf="@+id/btn_hybrid"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_hybrid"
        style="@style/btn_style"
        android:text="@string/hybrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_normal"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space"
        style="@style/space_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_hybrid" />

    <Button
        android:id="@+id/btn_polyline"
        style="@style/btn_style"
        android:text="@string/polyline"
        app:layout_constraintEnd_toStartOf="@+id/btn_markers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space" />

    <Button
        android:id="@+id/btn_markers"
        style="@style/btn_style"
        android:text="@string/markers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_polyline"
        app:layout_constraintTop_toBottomOf="@id/space" />

    <Space
        android:id="@+id/space2"
        style="@style/space_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_markers" />

    <Button
        android:id="@+id/btn_clear"
        style="@style/btn_style"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space2" />

</androidx.constraintlayout.widget.ConstraintLayout>